load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "java",
    out = "{name}.jar",
    options = ["lite"],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_javalite",
    out = "{name}_grpc.jar",
    options = ["lite"],
    tool = "@io_grpc_grpc_java//compiler:grpc_java_plugin",
    visibility = ["//visibility:public"],
)

java_library(
    name = "proto_deps",
    visibility = ["//visibility:public"],
    exports = [
        "@com_google_guava_guava_android//jar",
        "@com_google_protobuf//:protobuf_javalite",
        "@javax_annotation_javax_annotation_api//jar",
    ],
)

java_library(
    name = "grpc_deps",
    visibility = ["//visibility:public"],
    exports = [
        ":proto_deps",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//stub",
    ],
)
