load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "js",
    out = "{name}.js",
    options = [
        "import_style=closure",
        "binary",
        "error_on_name_conflict",
        "add_require_for_enums",
        "library={name}",
    ],
    outdir = "{name}",
    visibility = ["//visibility:public"],
)
