load(
    "@build_stack_rules_proto//rules:proto_dependency.bzl",
    "proto_dependency",
)

proto_dependency(
    name = "com_google_protobuf",
    repository_rule = "http_archive",
    sha256 = "d0f5f605d0d656007ce6c8b5a82df3037e1d8fe8b121ed42e536f569dec16113",
    strip_prefix = "protobuf-3.14.0",
    urls = ["https://github.com/protocolbuffers/protobuf/archive/v3.14.0.tar.gz"],
    visibility = ["//visibility:public"],
    deps = [
        ":bazel_skylib",
        ":rules_python",
        ":zlib",
    ],
)

proto_dependency(
    name = "rules_python",
    repository_rule = "http_archive",
    sha256 = "8cc0ad31c8fc699a49ad31628273529ef8929ded0a0859a3d841ce711a9a90d5",
    strip_prefix = "rules_python-c7e068d38e2fec1d899e1c150e372f205c220e27",
    urls = ["https://github.com/bazelbuild/rules_python/archive/c7e068d38e2fec1d899e1c150e372f205c220e27.tar.gz"],
    visibility = ["//visibility:public"],
)

proto_dependency(
    name = "bazel_skylib",
    repository_rule = "http_archive",
    sha256 = "ebdf850bfef28d923a2cc67ddca86355a449b5e4f38b0a70e584dc24e5984aa6",
    strip_prefix = "bazel-skylib-f80bc733d4b9f83d427ce3442be2e07427b2cc8d",
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/f80bc733d4b9f83d427ce3442be2e07427b2cc8d.tar.gz"],
    visibility = ["//visibility:public"],
)

proto_dependency(
    name = "zlib",
    build_file = "@build_stack_rules_proto//third_party:BUILD.bazel.zlib",
    repository_rule = "http_archive",
    sha256 = "c3e5e9fdd5004dcb542feda5ee4f0ff0744628baf8ed2dd5d66f8ca1197cb1a1",
    strip_prefix = "zlib-1.2.11",
    urls = [
        "https://mirror.bazel.build/zlib.net/zlib-1.2.11.tar.gz",
        "https://zlib.net/zlib-1.2.11.tar.gz",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = ["//core/grpc:all_files"] + glob(["**"]),
    visibility = ["//visibility:public"],
)

exports_files(glob(["*.tmpl"]))
