load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "cpp",
    outputs = [
        ".pb.h",
        ".pb.cc",
    ],
    options = ["foo"],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_cpp",
    outputs = [
        ".grpc.pb.h",
        ".grpc.pb.cc",
    ],
    tool = "@com_github_grpc_grpc//:grpc_cpp_plugin",
    visibility = ["//visibility:public"],
)
