load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "cpp",
    outputs = [
        "{protopath}.pb.h",
        "{protopath}.pb.cc",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_cpp",
    options = [
        "generate_mock_code=true",
    ],
    outputs = [
        "{protopath}.grpc.pb.h",
        "{protopath}.grpc.pb.cc",
        "{protopath}_mock.grpc.pb.h",
    ],
    tool = "@com_github_grpc_grpc//:grpc_cpp_plugin",
    visibility = ["//visibility:public"],
)
