load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "csharp",
    outputs = ["{package}/{basename|pascal}.cs"],
    transitivity = {
        "google/protobuf": "exclude",
    },
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_csharp",
    outputs = ["{package}/{basename|pascal}Grpc.cs"],
    tool = "@com_github_grpc_grpc//src/compiler:grpc_csharp_plugin",
    transitivity = {
        "google/protobuf": "exclude",
    },
    visibility = ["//visibility:public"],
)
