load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "d",
    output_directory = True, # Plugin outputs cannot be predicted when proto packages are used
    tool = "@com_github_dcarp_protobuf_d//:protoc-gen-d",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
