load("@build_stack_rules_proto//language/rules:proto_site_test.bzl", "proto_site_test")

proto_site_test(
    name = "site_test",
    srcs = [
        "cc.md",
        "cc_grpc_compile.md",
        "cc_proto_compile.md",
        "cc_proto_library.md",
        "py_grpc_compile.md",
        "py_proto_compile.md",
        "py_proto_library.md",
        "python.md",
    ],
    languages = [
        "//language/cc",
        "//language/python",
    ],
    rules = [
        "//language/cc/cc_grpc_compile",
        "//language/cc/cc_proto_compile",
        "//language/cc/cc_proto_library",
        "//language/python/py_grpc_compile",
        "//language/python/py_proto_compile",
        "//language/python/py_proto_library",
    ],
)
