load("@build_stack_rules_proto//language/rules:proto_site_test.bzl", "proto_site_test")

proto_site_test(
    name = "site_test",
    srcs = [
        "cc.md",
        "cc_grpc_compile.md",
        "cc_grpc_library.md",
        "cc_proto_compile.md",
        "cc_proto_library.md",
        "closure.md",
        "closure_proto_compile.md",
        "closure_proto_library.md",
        "grpc_js.md",
        "grpc_js_grpc_compile.md",
        "grpc_js_grpc_library.md",
        "py_grpc_compile.md",
        "py_grpc_library.md",
        "py_proto_compile.md",
        "py_proto_library.md",
        "python.md",
    ],
    languages = [
        "//language/cc",
        "//language/closure",
        "//language/grpc_js",
        "//language/python",
    ],
    rules = [
        "//language/cc/cc_grpc_compile",
        "//language/cc/cc_grpc_library",
        "//language/cc/cc_proto_compile",
        "//language/cc/cc_proto_library",
        "//language/closure/closure_proto_compile",
        "//language/closure/closure_proto_library",
        "//language/grpc_js/grpc_js_grpc_compile",
        "//language/grpc_js/grpc_js_grpc_library",
        "//language/python/py_grpc_compile",
        "//language/python/py_grpc_library",
        "//language/python/py_proto_compile",
        "//language/python/py_proto_library",
    ],
)
