load("@build_stack_rules_proto//rules/proto/rules:proto_site_test.bzl", "proto_site_test")

proto_site_test(
    name = "site_test",
    srcs = [
        "cc.md",
        "cc_grpc_compile.md",
        "cc_grpc_library.md",
        "cc_proto_compile.md",
        "cc_proto_library.md",
        "closure.md",
        "closure_proto_compile.md",
        "closure_proto_library.md",
        "grpc_js.md",
        "grpc_js_grpc_compile.md",
        "grpc_js_grpc_library.md",
        "java.md",
        "java_grpc_compile.md",
        "java_grpc_library.md",
        "java_proto_compile.md",
        "java_proto_library.md",
        "nodejs.md",
        "nodejs_grpc_compile.md",
        "nodejs_grpc_library.md",
        "nodejs_proto_compile.md",
        "nodejs_proto_library.md",
        "py_grpc_compile.md",
        "py_grpc_library.md",
        "py_proto_compile.md",
        "py_proto_library.md",
        "python.md",
    ],
    languages = [
        "//rules/proto/cc",
        "//rules/proto/closure",
        "//rules/proto/nodejs",
        "//rules/proto/java",
        "//rules/proto/grpc_js",
        "//rules/proto/python",
    ],
    rules = [
        "//rules/proto/cc/cc_grpc_compile",
        "//rules/proto/cc/cc_grpc_library",
        "//rules/proto/cc/cc_proto_compile",
        "//rules/proto/cc/cc_proto_library",
        "//rules/proto/closure/closure_proto_compile",
        "//rules/proto/closure/closure_proto_library",
        "//rules/proto/grpc_js/grpc_js_grpc_compile",
        "//rules/proto/grpc_js/grpc_js_grpc_library",
        "//rules/proto/java/java_grpc_compile",
        "//rules/proto/java/java_grpc_library",
        "//rules/proto/java/java_proto_compile",
        "//rules/proto/java/java_proto_library",
        "//rules/proto/nodejs/nodejs_grpc_compile",
        "//rules/proto/nodejs/nodejs_grpc_library",
        "//rules/proto/nodejs/nodejs_proto_compile",
        "//rules/proto/nodejs/nodejs_proto_library",
        "//rules/proto/python/py_grpc_compile",
        "//rules/proto/python/py_grpc_library",
        "//rules/proto/python/py_proto_compile",
        "//rules/proto/python/py_proto_library",
    ],
)
